--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "node_modules/.bin/mocha"
   },
   "author": "Mirko Kiefer <mail@mirkokiefer.com>",
-  "license": "BSD"
+  "license": "BSD",
+  "devDependencies": {
+    "mocha": "~1.11.0"
+  }
 }
