--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "async-iterators",
   "version": "0.0.3",
   "description": "utility functions for async iterators",
+  "homepage": "https://github.com/mirkokiefer/async-iterators",
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha"
